--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,14 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-//	testImplementation(
-//			'org.hamcrest:hamcrest-library:2.1'
-//	)
+
+	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+
+	compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.5'
+
 }
 
 test {
